updated the uuid change
